Added README and renamed some stuff.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <img id="logo" src="images/logo.png"/>
 
 <textarea class="editable"></textarea>
-<button id="destroy">Cancelar</button>
+<button id="destroy">Cancel</button>
 
 <footer>&copy; <a href="#">João Luís</a> 2015</footer>
 
