--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Koala Editor</title>
     <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
-    <script src="js/koalaeditor.js"></script>
-    <link rel="stylesheet" href="css/koalaeditor.css"/>
+    <script src="js/koalaeditor.min.js"></script>
+    <link rel="stylesheet" href="css/koalaeditor.min.css"/>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
     <link rel="icon" type="image/png" href="images/favicon.png" />
