--- a/index.html
+++ b/index.html
@@ -16,9 +16,14 @@
     <!-- Load jQuery -->
     <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
 
+    <!-- Load jQuery UI -->
+    <script src="js/jquery-ui.min.js"></script>
+    <link rel="stylesheet" href="css/jquery-ui.css"/>
+
     <!-- Load Koala -->
     <script src="js/koalaeditor.js"></script>
     <link rel="stylesheet" href="css/koalaeditor.css"/>
+    <link rel="stylesheet" href="css/themes/dark-koala.css"/>
 
     <script src="js/langs/pt_pt.js"></script>
 
@@ -32,7 +37,8 @@
     <img id="logo" src="website_assets/images/logo.png"/>
     <nav id="topNav">
         <ul>
-            <li><a href="https://github.com/joaopluis/KoalaEditor" class="icon"><span class="fa fa-github"></span></a></li>
+            <li><a href="https://github.com/joaopluis/KoalaEditor" class="icon"><span class="fa fa-github"></span></a>
+            </li>
         </ul>
     </nav>
 </header>
@@ -56,6 +62,8 @@
     <button id="destroy">Disable</button>
     <button id="enable" style="display: none">Enable</button>
 
+    <pre>$("#editable").koala();</pre>
+
     <h2>2. <code>&lt;div&gt;</code></h2>
 
     <div id="editable2">
@@ -64,20 +72,47 @@
     <button id="destroy2">Disable</button>
     <button id="enable2" style="display: none">Enable</button>
 
+    <pre>$("#editable2").koala();</pre>
+
     <h2>3. No toolbar</h2>
+
     <div id="editable3">
         <p>Some dummy content in this <code>div</code>.</p>
     </div>
 
+    <pre>$("#editable3").koala({
+    toolbar: false
+});</pre>
+
     <h2>4. Only some buttons</h2>
+
     <div id="editable4">
         <p>Some dummy content in this <code>div</code>.</p>
     </div>
 
-    <h2>5. Now in Portuguese!</h2>
+    <pre>$("#editable4").koala({
+    buttons: ['bold', 'italic', 'underline', 'sep', 'code']
+});</pre>
+
+    <h2>5. The dark side</h2>
+
     <div id="editable5">
+        <p>Some dummy content in this <code>div</code>.</p>
+    </div>
+
+    <pre>$("#editable5").koala({
+    theme: "dark-koala"
+});</pre>
+
+    <h2>6. Now in Portuguese!</h2>
+
+    <div id="editable6">
         <p>Algum conteúdo aleatório nesta <code>div</code>.</p>
     </div>
+
+    <pre>$("#editable6").koala({
+    language: "pt_pt"
+});</pre>
 </section>
 
 <footer>&copy; <a href="#">João Luís</a> 2015</footer>
@@ -86,6 +121,7 @@
     $('.mainEditable').koala();
 
     $('#editable').koala();
+
     $('#destroy').click(function () {
         $('#editable').koala().destroy();
         $(this).hide();
@@ -118,6 +154,10 @@
     });
 
     $('#editable5').koala({
+        theme: "dark-koala"
+    });
+
+    $('#editable6').koala({
         language: "pt_pt"
     });
 </script>
