--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
     <link rel="stylesheet" href="website_assets/website.min.css"/>
 
     <!-- Load jQuery -->
-    <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
 
     <!-- Load jQuery UI -->
-    <script src="js/jquery-ui.min.js"></script>
-    <link rel="stylesheet" href="css/jquery-ui.css"/>
+    <script src="bower_components/jquery-ui/jquery-ui.min.js"></script>
+    <link rel="stylesheet" href="bower_components/jquery-ui/themes/base/all.min.css"/>
 
     <!-- Load Koala -->
     <script src="js/koalaeditor.js"></script>
     <link rel="stylesheet" href="css/koalaeditor.css"/>
     <link rel="stylesheet" href="css/themes/dark-koala.css"/>
 
-    <script src="js/langs/pt_pt.js"></script>
+    <script src="js/langs/pt.js"></script>
 
     <!-- Load Font Awesome -->
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="bower_components/components-font-awesome/css/font-awesome.min.css">
 
 </head>
 <body>
@@ -121,11 +121,11 @@
     </div>
 
     <pre>$("#editable7").koala({
-    language: "pt_pt"
+    language: "pt"
 });</pre>
 </section>
 
-<footer>&copy; <a href="#">João Luís</a> 2015</footer>
+<footer>&copy; <a href="http://www.joaopluis.pt">João Luís</a> 2016</footer>
 
 <script>
     $('.mainEditable').koala();
@@ -172,7 +172,7 @@
     });
 
     $('#editable7').koala({
-        language: "pt_pt"
+        language: "pt"
     });
 </script>
 
