Fixed code editing not updating the content, along with some styling issues.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <!-- Load jQuery UI -->
     <script src="bower_components/jquery-ui/jquery-ui.min.js"></script>
-    <link rel="stylesheet" href="bower_components/jquery-ui/themes/base/all.min.css"/>
+    <link rel="stylesheet" href="bower_components/jquery-ui/themes/base/all.css"/>
 
     <!-- Load Koala -->
     <script src="js/koalaeditor.js"></script>
